<resources>
    <string name="app_name">跳绳APP</string>
    <string name="bt_client">输入学生信息</string>
    <string name="bt_server">BT服务端</string>
    <string name="ble_client">BLE客户端(主机/中心设备/Central)</string>
    <string name="ble_server">BLE服务端(从机/外围设备/peripheral)</string>
    <string name="bt">经典蓝牙(BT)</string>
    <string name="ble">低功耗蓝牙(BLE)</string>
    <string name="reScan">重新扫描</string>
    <string name="read">读取</string>
    <string name="setNotify">设置通知</string>
    <string name="max_byte">最多20字节</string>
    <string name="write">写入</string>
</resources>
